workspace/operators/v2/valuation/valuation_dividend.md
---
id: valuation_dividend
name: 债券视角股息估值法
category: valuation
tags: [valuation, dividend, yield]
data_needed: [daily_indicators, dividend, income, cashflow]
history_variant: valuation_dividend_history
outputs:
  - field: dividend_yield_pct
    type: float
    desc: 当期股息率(%)
  - field: dividend_sustainable
    type: bool
    desc: 股息是否可持续
---

## 债券视角股息估值法

### 一、核心理念

将股票视为"永续浮息债券"：以当前股息率为票面利率，以股息增长率为利率上浮机制。当股息率显著高于无风险利率时，股票作为"债券替代"具有吸引力。

### 二、核心指标体系

#### 2.1 股息率计算

```
当期股息率 = 最近12个月每股股息 / 当前股价 x 100%
远期股息率 = 预期未来12个月每股股息 / 当前股价 x 100%（需估算）
```

#### 2.2 股息率 vs 无风险利率

| 股息率/无风险利率比值 | 评估 | 操作建议 |
|-------------------|------|---------|
| > 2.5倍 | 极度有吸引力 | 可作为核心持仓 |
| 2.0-2.5倍 | 有吸引力 | 正常建仓 |
| 1.5-2.0倍 | 一般吸引力 | 小仓位或观望 |
| 1.0-1.5倍 | 吸引力不足 | 不建议买入 |
| < 1.0倍 | 无吸引力 | 排除 |

**无风险利率获取**：
1. 优先通过 `query_market_context(info_type="bond_yield")` 获取最新10年期国债收益率
2. 若无法获取，使用 daily_indicator 中的市场数据推算
3. **利率下限保护**：当10年期国债收益率低于2%时，使用2%作为计算下限，避免低利率环境下的比率失真

> 注：2024-2025年中国10年期国债收益率已降至1.6-1.7%区间，直接使用会使股息率吸引力指标虚高。设置2%下限是审慎做法。

#### 2.3 历史百分位分析

```
当前股息率在历史N年（建议5-10年）中的百分位：

高于80分位 -> 股价处于历史低位区间（低估信号）
60-80分位 -> 偏低位
40-60分位 -> 中位
20-40分位 -> 偏高位
低于20分位 -> 股价处于历史高位区间（高估信号）
```

**注意**：百分位分析基于股息率=股息/股价，股价越低则股息率越高、百分位越高。

### 三、连续分红评估

#### 3.1 分红连续性评级

| 连续分红年数 | 评级 | 说明 |
|------------|------|------|
| >= 10年 | 优秀 | 穿越完整周期的分红记录 |
| 7-9年 | 良好 | 有较强分红意愿 |
| 4-6年 | 一般 | 需关注分红政策稳定性 |
| 1-3年 | 不足 | 分红历史太短，不宜以股息估值 |
| 0年 | 不适用 | 不适合股息估值法 |

#### 3.2 股息增长率

```
股息5年复合增长率(CAGR) = (最近年股息/5年前股息)^(1/5) - 1
```

| 股息CAGR | 评估 |
|---------|------|
| > 10% | 高增长股息，"浮息债券"利率持续上浮 |
| 5-10% | 稳健增长，跑赢通胀 |
| 0-5% | 勉强维持购买力 |
| < 0% | 股息缩减，需警惕基本面恶化 |

#### 3.3 派息率可持续性检查

```
派息率 = 每股股息 / 每股收益(EPS)

安全区间：30%-70%（有盈利支撑且有提升空间）
警惕信号：> 90%（接近极限，缩减风险高）
优质信号：40-60% + FCF覆盖率>150%（既安全又有提升空间）
```

**FCF覆盖率 = 自由现金流 / 股息总额**：
- > 200%：股息极安全，且有大幅提升空间
- 150-200%：股息安全
- 100-150%：股息可持续但提升空间有限
- < 100%：股息可能不可持续，需警惕

### 四、适用性判断（决策树）

```
该标的是否适合股息估值法？

检查1：连续分红 >= 5年？
    +-- 否 -> 不适用股息估值法，改用FCF估值
    +-- 是 -> 继续

检查2：派息率在30-80%且FCF覆盖率>100%？
    +-- 否 -> 股息可能不可持续，谨慎使用
    +-- 是 -> 继续

检查3：业务模式是否具备稳定现金流特征？
    +-- 公用事业/银行/高速公路/消费必需品 -> 高度适用
    +-- 稳定期制造业/地产REITs -> 适用
    +-- 周期股/科技股/亏损期企业 -> 不适用

检查4：管理层分红意愿是否明确？
    +-- 有明确分红政策/承诺 -> 加分
    +-- 无明确政策但历史稳定 -> 中性
    +-- 分红金额波动大 -> 减分
```

### 五、综合评估模板

```
股息估值评估：
1. 当期股息率：[ ]%
2. 无风险利率：[ ]%
3. 股息率/无风险利率 = [ ]倍 -> [评级]
4. 历史百分位（5年）：[ ]分位 -> [高估/合理/低估]
5. 连续分红年数：[ ]年 -> [评级]
6. 股息5年CAGR：[ ]% -> [评级]
7. 派息率：[ ]% -> [是否可持续]
8. FCF覆盖率：[ ]% -> [是否安全]
9. 适用性：[适用/不适用]
10. 综合结论：[ ]
```

### 六、A股股息税收影响

**A股股息税收影响**：
- 持股 > 1年：免税
- 持股 1个月-1年：税率10%
- 持股 < 1个月：税率20%
- 长期持有策略下可忽略税收影响，短期持有需使用税后股息率

### 七、注意事项

1. 股息估值法是辅助方法，不应作为唯一估值依据；FCF估值优先级更高
2. 高股息率可能是"价值陷阱"——股价下跌导致的被动高股息率，需结合基本面判断
3. 港股注意汇率影响：港币计价股息需考虑汇率波动对人民币收益率的影响
4. 特别股息/一次性股息应从计算中剔除，使用经常性股息
5. 牛市中股息率自然下降（股价上涨），不应因此放弃股息率底线（如3.8%）
